[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/tests/characterAnimTest.gd" type="Script" id=1]
[ext_resource path="res://assets/images/tests/SarahSWalkSprite.png" type="Texture" id=2]
[ext_resource path="res://assets/images/tests/TomSWalkSprite.png" type="Texture" id=3]
[ext_resource path="res://assets/images/tests/MothSprite002.png" type="Texture" id=4]
[ext_resource path="res://assets/images/tests/SWalkSprite01.png" type="Texture" id=5]

[node name="characterAnimTest" type="Node2D"]
script = ExtResource( 1 )

[node name="SarahSWalkSprite" type="Sprite" parent="."]
position = Vector2( 177, 67 )
texture = ExtResource( 2 )
hframes = 6

[node name="TomSWalkSprite" type="Sprite" parent="."]
position = Vector2( 278, 272 )
texture = ExtResource( 3 )
hframes = 6

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 279, 179 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="MothSprite002" type="Sprite" parent="."]
position = Vector2( 390.752, 120.746 )
texture = ExtResource( 4 )
hframes = 6

[node name="SWalkSprite01" type="Sprite" parent="."]
position = Vector2( 227.004, 76.7981 )
texture = ExtResource( 5 )
hframes = 8
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
